--- a/assets/components/code-syntax.scss
+++ b/assets/components/code-syntax.scss
@@ -10,9 +10,8 @@
 
 /* Inline code */
 code {
-  background: #f2f2f2;
   border-radius: 2px;
-  color: #1f5b83;
+  color: #e0e0d7;
   padding: 0 .2em;
   font-family: 'source-code-regular', 'Monaco', 'Courier New', monospace;
   font-style: normal;
@@ -28,6 +27,7 @@ code {
     font-weight: 400;
     font-size: 2.5rem;
   }
+  border-top: 1px solid #e6e6e6;
 }
 
 .fa-twitter {
