--- a/assets/pages/page-post.scss
+++ b/assets/pages/page-post.scss
@@ -116,6 +116,7 @@
   p {
     margin-top: 1rem;
     padding-bottom: 1rem;
+    font-size: 1.2rem;
   }
 
   a {
@@ -128,25 +129,117 @@
     max-width: 100%;
   }
 
+  span {
+    font-weight: 600;
+  }
+
   #single-post {
     flex: 0 0 70%;
     border-right: 1px solid #ebebeb;
+
+    ul {
+      list-style-type: disc;
+      list-style: disc;
+
+      li {
+        list-style: disc;
+      }
+    }
+
     h3 {
       font-style: normal;
       font-weight: 400;
       font-size: 1.5rem;
-      font-family: 'titillium-bold',arial,sans-serif;
+      font-family: 'titillium-bold', arial, sans-serif;
     }
+
     h4 {
       font-style: normal;
       font-weight: 400;
       font-size: 1.5rem;
       text-transform: uppercase;
-      font-family: 'titillium-bold',arial,sans-serif;
+      font-family: 'titillium-bold', arial, sans-serif;
     }
 
     @media screen and (min-width: 800px) {
       padding: 4rem 0 0 4rem;
+    }
+  }
+
+  a.cta.blue {
+    background: #005ac8;
+  }
+
+  a.cta.red {
+    background: #eb0000;
+  }
+
+  a.cta.teal {
+    background: #00bebc;
+  }
+
+  a.cta {
+    border-radius: 1px;
+    display: inline-block;
+    padding: 1em 3em;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    -webkit-transition: background .1s ease-in-out;
+    transition: background .1s ease-in-out;
+  }
+
+  .author-bio {
+    border-top: 1px solid #e6e6e6;
+    border-width: 1px 0;
+    margin: 40px 0;
+    padding: 40px 0;
+
+    &::after,
+    &::before {
+      content: " ";
+      display: table;
+    }
+
+    .avatar {
+      float: left;
+      height: 128px;
+      margin-right: 20px;
+      overflow: hidden;
+      width: 128px;
+      position: relative;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      &::after {
+        content: "RACKER";
+        font-size: 12px;
+        width: 100%;
+      }
+
+      &::before,
+      &::after {
+        background: rgba(235, 0, 0, .8);
+        color: #fff;
+        left: 0;
+        line-height: 1.5;
+        position: absolute;
+        text-align: center;
+        bottom: 0;
+      }
+    }
+
+    .bio {
+      font-size: 1.2rem;
+    }
+
+    .name {
+      display: block;
+      font-size: 128.57142857%;
+      margin-bottom: .5em;
     }
   }
 }
@@ -227,11 +320,10 @@
     }
   }
 
-  .blog-post-img {
+  img {
     margin: 0 0 1em 1em;
     float: right;
     height: auto;
-    max-width: 50%;
     display: block;
   }
 }
@@ -266,7 +358,6 @@
 
 .highlight {
   background: $color-black;
-  color: $color-light-grey;
   padding: 1em;
   margin-bottom: 3em;
   line-height: 1.1em;
@@ -278,9 +369,8 @@
   font-weight: 400;
 
   pre {
-    background-color: inherit;
+    background-color: transparent !important;
     border: none;
-    color: inherit;
     overflow-x: scroll;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
