--- a/assets/pages/page-post.scss
+++ b/assets/pages/page-post.scss
@@ -145,6 +145,7 @@
       li {
         list-style: disc;
         margin-left: 1.5rem;
+        list-style-type: disc !important;
       }
     }
 
